@@ -55,7 +55,6 @@ GSS_CALLCONV gss_inquire_sec_context_by_oid(
     gss_buffer_desc                     data_set_buffer = GSS_C_EMPTY_BUFFER;
     globus_result_t                     local_result = GLOBUS_SUCCESS;
     unsigned char *                     tmp_ptr;
-    char *                              copy = NULL;
 
     GLOBUS_I_GSI_GSSAPI_DEBUG_ENTER;
 
@@ -153,19 +152,12 @@ GSS_CALLCONV gss_inquire_sec_context_by_oid(
     {
         if (context->sni_servername != NULL)
         {
-            copy = strdup(context->sni_servername);
-            if (copy == NULL)
-            {
-                GLOBUS_GSI_GSSAPI_MALLOC_ERROR(minor_status);
-                major_status = GSS_S_FAILURE;
-                goto unlock_exit;
-            }
             major_status = gss_add_buffer_set_member(
                 &local_minor_status,
                 &(gss_buffer_desc)
                 {
-                    .value = copy,
-                    .length = strlen(copy) + 1,
+                    .value = context->sni_servername,
+                    .length = strlen(context->sni_servername) + 1,
                 },
                 data_set);
             if(GSS_ERROR(major_status))
@@ -188,19 +180,11 @@ GSS_CALLCONV gss_inquire_sec_context_by_oid(
             SSL_get0_alpn_selected(context->gss_ssl, &data, &len);
             if (len != 0)
             {
-                copy = malloc(len);
-                if (copy == NULL)
-                {
-                    GLOBUS_GSI_GSSAPI_MALLOC_ERROR(minor_status);
-                    major_status = GSS_S_FAILURE;
-                    goto unlock_exit;
-                }
-                memcpy(copy, data, len);
                 major_status = gss_add_buffer_set_member(
                     &local_minor_status,
                     &(gss_buffer_desc)
                     {
-                        .value = copy,
+                        .value = data,
                         .length = len
                     },
                     data_set);
@@ -224,33 +208,21 @@ GSS_CALLCONV gss_inquire_sec_context_by_oid(
         tls_version = SSL_get_version(context_handle->gss_ssl);
         if (tls_version != NULL)
         {
-            copy = strdup(tls_version);
-
-            if (copy == NULL)
-            {
-                GLOBUS_GSI_GSSAPI_MALLOC_ERROR(minor_status);
-                major_status = GSS_S_FAILURE;
-                goto unlock_exit;
-            }
-            else
-            {
-                major_status = gss_add_buffer_set_member(
-                    &local_minor_status,
-                    &(gss_buffer_desc)
-                    {
-                        .value = copy,
-                        .length = strlen(copy) + 1,
-                    },
-                    data_set);
-
-                if(GSS_ERROR(major_status))
+            major_status = gss_add_buffer_set_member(
+                &local_minor_status,
+                &(gss_buffer_desc)
                 {
-                    GLOBUS_GSI_GSSAPI_ERROR_CHAIN_RESULT(
-                        minor_status, local_minor_status,
-                        GLOBUS_GSI_GSSAPI_ERROR_WITH_BUFFER);
-                    free(copy);
-                    goto unlock_exit;
-                }
+                    .value = tls_version,
+                    .length = strlen(tls_version) + 1,
+                },
+                data_set);
+
+            if(GSS_ERROR(major_status))
+            {
+                GLOBUS_GSI_GSSAPI_ERROR_CHAIN_RESULT(
+                    minor_status, local_minor_status,
+                    GLOBUS_GSI_GSSAPI_ERROR_WITH_BUFFER);
+                goto unlock_exit;
             }
         }
     }
@@ -265,33 +237,21 @@ GSS_CALLCONV gss_inquire_sec_context_by_oid(
 
         if (cipher_name != NULL)
         {
-            char *copy = strdup(cipher_name);
-
-            if (copy == NULL)
-            {
-                GLOBUS_GSI_GSSAPI_MALLOC_ERROR(minor_status);
-                major_status = GSS_S_FAILURE;
-                goto unlock_exit;
-            }
-            else
-            {
-                major_status = gss_add_buffer_set_member(
-                    &local_minor_status,
-                    &(gss_buffer_desc)
-                    {
-                        .value = copy,
-                        .length = strlen(copy) + 1,
-                    },
-                    data_set);
-
-                if(GSS_ERROR(major_status))
+            major_status = gss_add_buffer_set_member(
+                &local_minor_status,
+                &(gss_buffer_desc)
                 {
-                    GLOBUS_GSI_GSSAPI_ERROR_CHAIN_RESULT(
-                        minor_status, local_minor_status,
-                        GLOBUS_GSI_GSSAPI_ERROR_WITH_BUFFER);
-                    free(copy);
-                    goto unlock_exit;
-                }
+                    .value = cipher_name,
+                    .length = strlen(cipher_name) + 1,
+                },
+                data_set);
+
+            if(GSS_ERROR(major_status))
+            {
+                GLOBUS_GSI_GSSAPI_ERROR_CHAIN_RESULT(
+                    minor_status, local_minor_status,
+                    GLOBUS_GSI_GSSAPI_ERROR_WITH_BUFFER);
+                goto unlock_exit;
             }
         }
     }
